# rust-io-component

./: .gitignore  Cargo.toml
src/: error.rs  main.rs  util.rs
src/io_component/: i2c.rs  mod.rs
src/msg/: mod.rs
