[package]
name = "rust-components"
version = "0.1.0"
authors = ["Scott Fasone <scott181182@yahoo.com>"]

[dependencies]
node-lib = { git = "https://github.com/knowlom/node-lib.git" }
i2cdev_lib = { git = "https://github.com/knowlom/rust-i2c-devices" }
messages = { git = "https://github.com/mwaverecycling/mwave_packages" }

log = "0.4.4"
env_logger = "0.5.12"
